# smart-store-kevinhennelly

./: README.md  mkdocs.yml  pyproject.toml
data/clean/: customers_data_clean.csv  products_data_clean.csv  sales_data_clean.csv
data/dw/: smart_sales.dw
data/prepared/: customers_prepared.csv  products_prepared.csv  sales_data_prepared.csv
data/raw/: customers_data.csv  products_data.csv  sales_data.csv
notebooks/: Project 5.ipynb  Project_6.ipynb  Project_7.ipynb  reporting_with_spark.ipynb
scripts/: add_columns_to_customers.py  add_columns_to_products.py  add_columns_to_sales.py
src/analytics_project/: data_prep.py  data_scrubber.py  demo_module_stats.py  etl_to_dw.py
src/data_preparation/: prepare_customers_data.py  prepare_products_data.py  prepare_sales_data.py
