# pyproject.toml: Modern Python project configuration

# Replaces requirements.txt, setup.py, and multiple config files
# This ONE file manages dependencies, tools, and standards


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "wheel"]

[project]
authors = [{name = "Kevin Hennelly"}]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
description = "Professional Python starter project using uv and a src layout"
license = "MIT"
name = "analytics-project" # PACKAGE name (matches src folder except with dashes)
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

dependencies = [ # fmt: off
  "loguru", # Better than print() - practice production logging with levels
  "matplotlib", # Industry standard plotting
  "pandas", # THE data manipulation tool in analytics
  "seaborn", # Statistical charts built on matplotlib
  "ipython", # Enhanced Python shell (needed for notebooks)
  "ipykernel", # Jupyter kernel for notebooks
  "pre-commit>=4.3.0",
]  # fmt: on

[project.urls]
"Bug Tracker" = "https://github.com/KHenn22/smart-store-kevinhennelly"
Documentation = "https://github.com/KHenn22/smart-store-kevinhennelly"
Homepage = "https://github.com/KHenn22/smart-store-kevinhennelly"
Repository = "https://github.com/KHenn22/smart-store-kevinhennelly"

[project.optional-dependencies]
dev = [
  "pytest", # run some tests automatically
  "pytest-cov", # coverage report for more visibility
]
docs = [
  "mkdocs",                # Core MkDocs
  "mkdocs-material",       # Modern, responsive theme
  "mkdocstrings[python]",  # Auto-generate API docs from docstrings
  "livereload",            # Enables live reload (auto-refresh on edit)
  "watchdog",              # Faster and more reliable file watching
  "ruff",                  # Needed so mkdocstrings can format signatures
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Ruff formats, lints, and fixes code
[tool.ruff]
exclude = [".venv", ".ruff_cache", "build", "dist", "*.egg-info", ".eggs", "__pycache__", "tests"]
fix = true
line-length = 100
preview = false
target-version = "py312"
unsafe-fixes = false

[tool.ruff.format]
line-ending = "lf"
quote-style = "preserve"

[tool.ruff.lint]
# CHANGED: pragmatic profile to go green quickly
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
extend-ignore = [
  "D",      # all pydocstyle docstring rules
  "S311",   # non-cryptographic random usage
  "N806",   # non-lowercase variable in function (e.g., ID)
  "TRY002", # try-except-pass (if plugin present)
  "S110",   # try-except-pass (Bandit variant)
  "Q000",   # quote consistency (we preserve current style)
  # keep your original ignores too:
  "E501",   # line length handled by formatter
  "D203",   # 1 blank line before class docstring (conflicts with D211)
  "D213",   # summary on second line (we're disabling D anyway)
  "D413",   # missing blank line after last section
  "S101",   # assert statements
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104"]
"tests/**/*.py" = ["TID251", "TID252", "S101", "D"]
"notebooks/**/*.ipynb" = ["F821"]

# Optional: Pyright checks that our type hints are correct
[tool.pyright]
extraPaths = ["src"]
include = ["src"]
pythonVersion = "3.12"
reportMissingImports = "warning"
reportPrivateUsage = "none"
typeCheckingMode = "basic" # or "strict"
useLibraryCodeForTypes = false # don't open libraries for types (some are on 3.14)
venv = ".venv"
venvPath = "."

# Optional: Pytest runs basic tests to ensure code runs correctly
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
